🩹 Fix: 수정: banner-content의 z-indexr 변수 처리

--- a/styles/constants/_z-indexes.scss
+++ b/styles/constants/_z-indexes.scss
@@ -1,3 +1,5 @@
+$banner-content-level: 10;
+
 $lnb-level: 100;
 $gnb-level: 100;
 
